fixed: z-index для модального окна редактирования

--- a/task5/src/modules/TaskModalCreationEditing/task-modal-creation-editing.module.scss
+++ b/task5/src/modules/TaskModalCreationEditing/task-modal-creation-editing.module.scss
@@ -22,7 +22,6 @@
 
 .modal-creation-editing {
    position: fixed; // !!!
-   z-index: 10;
    top: 50%;
    left: 50%;
    width: 100vw;
@@ -34,7 +33,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   z-index: 10;
+   z-index: 21;
 }
 .close-button-modal {
    position: absolute;
